# deep-learning-6900

./: README.md
HW01/: Darwiche_Alexander_HW1_Report.docx  classify.py  classify_ViT.py  classify_conv.py  pyproject.toml
HW02/: CNNclassify.py  classify_conv.py  pyproject.toml
